# hostman

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md  RELEASE.md  install.sh
include/hostman/core/: config.h  logging.h  utils.h
include/hostman/network/: hosts.h  network.h
src/: cli.c  cli.h  config.c  config.h  database.c  database.h  encryption.c  encryption.h  hosts.c  hosts.h  logging.c  logging.h  main.c  network.c  network.h  utils.c  utils.h
src/cli/: cli.c
src/core/: config.c  logging.c  utils.c  utils.h
src/crypto/: encryption.c
src/network/: hosts.c  hosts.h  network.c
src/storage/: database.c
